# shellshelf

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT_PLAN.md  README.md  clippy.toml
.github/workflows/: ci.yml  lint-and-test.yml  release.yml
assets/web/: app.js  styles.css
docs/: reference.md  technical-overview.md
docs/plans/: 2026-04-01-001-feat-shelf-name-search-plan.md
scripts/: generate-homebrew-formula.sh  publish-homebrew-tap.sh
skills/combib/: SKILL.md
skills/combib/agents/: openai.yaml
skills/shellshelf/: SKILL.md
skills/shellshelf/agents/: openai.yaml
src/: app.rs  backup_repo.rs  browse.rs  cli.rs  config.rs  curl_runner.rs  database.rs  github.rs  history.rs  keywords.rs  lib.rs  main.rs  personal_repo.rs  postman_import.rs  shared_repo_publish.rs  web.rs
tests/: homebrew_formula_tests.rs  integration_tests.rs
