[package]
name = "shellshelf"
version = "0.2.2"
edition = "2021"
description = "CLI for storing, searching, and sharing reusable shell commands"
license = "MIT"
repository = "https://github.com/vcali/shellshelf"
homepage = "https://github.com/vcali/shellshelf"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
